Added linting
