# src/controllers/utils.js
@@ -5,17 +5,17 @@ const sharp = require('sharp');
 const fs = require('fs');
 
 exports.generateAuthToken = ({ username }) => {
-  const token = jwt.sign({ username }, config.JWT_KEY, { expiresIn: '5h' });
-  return token;
+	const token = jwt.sign({ username }, config.JWT_KEY, { expiresIn: '5h' });
+	return token;
 };
 
 exports.downloadImage = options => {
-  return download.image(options);
+	return download.image(options);
 };
 
 exports.resize = filename => {
-  const inputFile = fs.createReadStream(filename);
-  const transform = sharp().resize({ width: 50, height: 50 });
+	const inputFile = fs.createReadStream(filename);
+	const transform = sharp().resize({ width: 50, height: 50 });
 
-  return inputFile.pipe(transform);
+	return inputFile.pipe(transform);
 };
