# src/middleware/schema.js
@@ -1,21 +1,21 @@
 const joi = require('@hapi/joi');
 
 exports.loginSchema = joi.object().keys({
-  username: joi
-    .string()
-    .min(4)
-    .required(),
-  password: joi
-    .string()
-    .min(4)
-    .required()
+	username: joi
+		.string()
+		.min(4)
+		.required(),
+	password: joi
+		.string()
+		.min(4)
+		.required()
 });
 
 exports.jsonpatchSchema = joi.object().keys({
-  json: [joi.object().required(), joi.array().required()],
-  patch: [joi.object().required(), joi.array().required()]
+	json: [joi.object().required(), joi.array().required()],
+	patch: [joi.object().required(), joi.array().required()]
 });
 
 exports.imageurlSchema = joi.object().keys({
-  imageUrl: joi.string().required()
+	imageUrl: joi.string().required()
 });
